Improving the issue of line breaks in Chinese

--- a/public/options/options.css
+++ b/public/options/options.css
@@ -696,10 +696,21 @@ svg {
 		width: 100%;
 		font-size: 30px;
 		padding: 10px;
-	}
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+    }
 
 	#title .profilepic {
 		height: 40px;
+		margin-right: 10px;
+	}
+
+	#title .title-text {
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
 	}
 
 	#createdBy {
@@ -721,8 +732,11 @@ svg {
 	#version {
 		font-size: 10px;
 		height: 10px;
-		transform: translate(-50px, -5px);
-	}
+        width: 100%;
+        text-align: center;
+        margin-top: 5px;
+        padding-right: 80px;
+    }
 
 	.sticky #menubar {
 		position: fixed;
